<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_orange_light"
    tools:context="com.example.computemygrades.MainActivity">

    <LinearLayout
        android:id="@+id/linearUp"
        android:layout_width="368dp"
        android:layout_height="269dp"
        android:layout_marginLeft="16dp"
        android:orientation="vertical"
        android:paddingLeft="12dp"
        app:layout_constraintBottom_toTopOf="@+id/linearDown"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.39999998"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="cursive"
            android:gravity="center_horizontal"
            android:text="@string/please_enter_your_grades"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/labs"
            app:layout_constraintLeft_toLeftOf="parent" />

        <EditText
            android:id="@+id/labs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="center_horizontal"
            android:hint="@string/labs_grade_20_max"
            android:inputType="number"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="73dp" />

        <EditText
            android:id="@+id/project"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="center_horizontal"
            android:hint="@string/project_grade_20_max"
            android:inputType="number"
            tools:layout_editor_absoluteX="161dp"
            tools:layout_editor_absoluteY="124dp" />

        <EditText
            android:id="@+id/midterm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="center_horizontal"
            android:hint="@string/midterm_grade_30_max"
            android:inputType="number"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="228dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearDown"
        android:layout_width="364dp"
        android:layout_height="176dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="50dp">

        <TextView
            android:id="@+id/subTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="cursive"
            android:gravity="center_horizontal"
            android:text="@string/please_select_desired_final_grade"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="30sp"
            tools:layout_editor_absoluteX="37dp"
            tools:layout_editor_absoluteY="294dp" />

        <Spinner
            android:id="@+id/goal"
            android:layout_width="110dp"
            android:layout_height="49dp"
            android:layout_marginLeft="6dp"
            android:layout_weight="0.46"
            android:entries="@array/grades"
            android:gravity="center"
            android:paddingLeft="6dp"
            android:spinnerMode="dialog"
            android:visibility="visible"
            app:layout_constraintRight_toRightOf="parent"
            tools:layout_editor_absoluteY="361dp" />

        <Button
            android:id="@+id/btnCalc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/calculate"
            app:layout_constraintLeft_toLeftOf="parent"
            tools:layout_editor_absoluteY="436dp" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
